--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,15 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <!-- JavaFX dependencies -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>22.0.2</version> <!-- Dostosuj wersję -->
+            <version>22.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>22.0.2</version> <!-- Dostosuj wersję -->
+            <version>22.0.2</version>
         </dependency>
     </dependencies>
 
@@ -27,7 +26,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.example.Main</mainClass> <!-- Zmień na Twoją klasę główną -->
+                    <mainClass>com.example.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
